--- a/src/scss/b-reset.scss
+++ b/src/scss/b-reset.scss
@@ -19,10 +19,14 @@ html {
   overflow: hidden;
   text-size-adjust: none;
   font-size: 8px;
+  height: 100%;
 }
 
 body {
   margin: 0;
+  height: 100%;
+  max-height: 100%;
+  overflow-y: auto;
 }
 
 img {
