--- a/src/scss/c-popup.scss
+++ b/src/scss/c-popup.scss
@@ -5,6 +5,7 @@ $r: ".c-popup";
 // block
 //-----------------------------------------------------------
 #{$r} {
+  --c-popup-gap: 3rem;
 
   // element
   //---------------------------------------------------------
@@ -16,19 +17,9 @@ $r: ".c-popup";
     visibility: hidden;
     position: absolute;
 
-    &--open {
-      &:checked {
-        ~ #{$r}__container {
-          display: flex;
-        }
-      }
-    }
-
-    &--close {
-      &:checked {
-        ~ #{$r}__container {
-          display: none;
-        }
+    &:checked {
+      ~ #{$r}__self {
+        display: block;
       }
     }
   }
@@ -44,27 +35,34 @@ $r: ".c-popup";
     background-color: rgba(0, 0, 0, 0.65);
   }
 
-  &__container {
-    align-items: center;
-    justify-content: center;
+  &__self {
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
     z-index: 100;
-    padding: 3rem;
     display: none;
     position: fixed;
   }
 
+  &__container {
+    display: grid;
+    place-items: center;
+    height: 100%;
+    min-height: 100%;
+    position: relative;
+  }
+
   &__body {
+    --block-size: calc(100% - 2 * var(--c-popup-gap));
+
     display: flex;
     flex-direction: column;
     z-index: 1;
-    width: 100%;
-    max-height: 100%;
+    width: var(--block-size);
     max-width: 768px;
     min-height: 10rem;
+    max-height: var(--block-size);
     position: relative;
     background-color: #ffffff;
     border-radius: var(--border-radius);
@@ -107,6 +105,26 @@ $r: ".c-popup";
 
   // modifier
   //---------------------------------------------------------
+
+  &--external-scroll {
+    #{$r}__inner {
+      overflow: unset;
+    }
+
+    #{$r}__self {
+      overflow-x: hidden;
+      overflow-y: auto;
+    }
+
+    #{$r}__container {
+      height: unset;
+    }
+
+    #{$r}__body {
+      margin: var(--c-popup-gap) 0;
+      max-height: unset;
+    }
+  }
 }
 
 // influence
