--- a/css/styles.css
+++ b/css/styles.css
@@ -406,11 +406,8 @@ textarea {
   visibility: hidden;
   position: absolute;
 }
-.c-popup__input--open:checked ~ .c-popup__container {
-  display: flex;
-}
-.c-popup__input--close:checked ~ .c-popup__container {
-  display: none;
+.c-popup__input:checked ~ .c-popup__self {
+  display: block;
 }
 .c-popup__overlay {
   top: 0;
@@ -422,26 +419,32 @@ textarea {
   position: absolute;
   background-color: rgba(0, 0, 0, 0.65);
 }
-.c-popup__container {
-  align-items: center;
-  justify-content: center;
+.c-popup__self {
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   z-index: 100;
-  padding: 3rem;
   display: none;
   position: fixed;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+.c-popup__container {
+  display: grid;
+  place-items: center;
+  height: 100%;
+  padding: 3rem;
+  min-height: 100vh;
+  position: relative;
 }
 .c-popup__body {
   display: flex;
   flex-direction: column;
   z-index: 1;
-  width: 100%;
-  max-height: 100%;
   max-width: 768px;
   min-height: 10rem;
+  max-height: 100%;
   position: relative;
   background-color: #ffffff;
   border-radius: var(--border-radius);
@@ -474,5 +477,8 @@ textarea {
   cursor: pointer;
   font-size: 2rem;
   position: absolute;
+}
+.c-popup--external-scroll .c-popup__container {
+  height: unset;
 }
 /*# sourceMappingURL=styles.css.map */
