--- a/css/styles.css
+++ b/css/styles.css
@@ -478,6 +478,9 @@ textarea {
   font-size: 2rem;
   position: absolute;
 }
+.c-popup--external-scroll .c-popup__inner {
+  overflow: unset;
+}
 .c-popup--external-scroll .c-popup__container {
   height: unset;
 }
