--- a/css/styles.css
+++ b/css/styles.css
@@ -427,14 +427,15 @@ textarea {
   z-index: 100;
   display: none;
   position: fixed;
-  overflow-x: hidden;
-  overflow-y: auto;
 }
 .c-popup__container {
   display: grid;
   place-items: center;
   height: 100%;
-  min-height: 100vh;
+  padding: 3rem;
+  min-height: 100%;
+  overflow-y: auto;
+  overflow-x: hidden;
   position: relative;
 }
 .c-popup__body {
