--- a/css/styles.css
+++ b/css/styles.css
@@ -434,8 +434,6 @@ textarea {
   height: 100%;
   padding: 3rem;
   min-height: 100%;
-  overflow-y: auto;
-  overflow-x: hidden;
   position: relative;
 }
 .c-popup__body {
@@ -477,6 +475,10 @@ textarea {
   cursor: pointer;
   font-size: 2rem;
   position: absolute;
+}
+.c-popup--external-scroll .c-popup__self {
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 .c-popup--external-scroll .c-popup__container {
   height: unset;
