--- a/css/styles.css
+++ b/css/styles.css
@@ -400,6 +400,9 @@ textarea {
 
 /* .c-
 -----------------------------------------------------------*/
+.c-popup {
+  --c-popup-gap: 3rem;
+}
 .c-popup__input {
   width: 0;
   height: 0;
@@ -436,7 +439,7 @@ textarea {
   position: relative;
 }
 .c-popup__body {
-  --block-size: calc(100% - 2 * 3rem);
+  --block-size: calc(100% - 2 * var(--c-popup-gap));
   display: flex;
   flex-direction: column;
   z-index: 1;
@@ -486,5 +489,9 @@ textarea {
 }
 .c-popup--external-scroll .c-popup__container {
   height: unset;
+}
+.c-popup--external-scroll .c-popup__body {
+  margin: var(--c-popup-gap) 0;
+  max-height: unset;
 }
 /*# sourceMappingURL=styles.css.map */
