--- a/css/styles.css
+++ b/css/styles.css
@@ -448,7 +448,7 @@ textarea {
   min-height: 10rem;
   max-height: var(--block-size);
   position: relative;
-  background-color: #ffffff;
+  background-color: var(--white);
   border-radius: var(--border-radius);
 }
 .c-popup__header {
@@ -493,5 +493,17 @@ textarea {
 .c-popup--external-scroll .c-popup__body {
   margin: var(--c-popup-gap) 0;
   max-height: unset;
+}
+.c-popup--external-scroll .c-popup__header {
+  background-color: var(--white);
+  position: sticky;
+  top: 0;
+  border-radius: var(--border-radius) var(--border-radius) 0 0;
+}
+.c-popup--external-scroll .c-popup__footer {
+  background-color: var(--white);
+  position: sticky;
+  bottom: 0;
+  border-radius: 0 0 var(--border-radius) var(--border-radius);
 }
 /*# sourceMappingURL=styles.css.map */
