--- a/src/scss/c-modal.scss
+++ b/src/scss/c-modal.scss
@@ -1,6 +1,6 @@
 /* .c-
 -----------------------------------------------------------*/
-$r: ".c-popup";
+$r: ".c-modal";
 
 // block
 //-----------------------------------------------------------
