rename --size-rate variable to --size

--- a/src/scss/b-vars.scss
+++ b/src/scss/b-vars.scss
@@ -18,7 +18,7 @@ $-gray-100:      #dadada;
 :root {
   // discreteness
   //-----------------------------------------------------------
-  --size-rate: 8px;
+  --size: 8px;
 
   // colors
   //-----------------------------------------------------------
