replace HEX to HSL

--- a/src/scss/b-vars.scss
+++ b/src/scss/b-vars.scss
@@ -11,10 +11,6 @@ $min-1200: 1200px;
 $max-1399: 1399px;
 $min-1400: 1400px;
 
-// colors
-//-----------------------------------------------------------
-$-gray-100:      #dadada;
-
 :root {
   // discreteness
   //-----------------------------------------------------------
@@ -22,16 +18,16 @@ $-gray-100:      #dadada;
 
   // colors
   //-----------------------------------------------------------
-  --white:         #ffffff;
-  --black:         #000000;
+  --white:         hsl(0, 0%, 100%);
+  --black:         hsl(0, 0%, 0%);
 
-  --gray-100:      #{$-gray-100};
-  --gray-200:      #222222;
-  --gray-300:      #999999;
-  --gray-400:      #{darken($-gray-100, 8%)};
-  --blue-100:      #1a73e8;
+  --gray-100:      hsl(0, 0%, 85%);
+  --gray-200:      hsl(0, 0%, 13%);
+  --gray-300:      hsl(0, 0%, 60%);
+  --gray-400:      hsl(0, 0%, 73%);
+  --blue-100:      hsl(214, 82%, 51%);
 
-  --red-100:       #f0506e;
+  --red-100:       hsl(349, 84%, 63%);
 
   --body-color:    var(--gray-200);
   --theme-color:   var(--blue-100);
@@ -39,6 +35,7 @@ $-gray-100:      #dadada;
   --form-error:    var(--red-100);
   --form-disabled: var(--gray-100);
   --placeholder:   var(--gray-300);
+  --overlay:       hsl(0, 0%, 0%, 65%);
 
   // font
   //-----------------------------------------------------------
