--- a/src/scss/c-modal.scss
+++ b/src/scss/c-modal.scss
@@ -47,7 +47,7 @@ $r: ".c-modal";
     z-index: 100;
     display: none;
     position: fixed;
-    background-color: rgba(0, 0, 0, 0.65);
+    background-color: var(--overlay);
   }
 
   &__inner {
