--- a/src/scss/b-vars.scss
+++ b/src/scss/b-vars.scss
@@ -39,7 +39,7 @@ $min-1400: 1400px;
 
   // font
   //-----------------------------------------------------------
-  --font-family-base: Arial, Helvetica, sans-serif;
+  --font-family-base: 'Arial', 'Helvetica', sans-serif;
   --font-family-password: 'Password';
 
   // others
